--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./day-08/part-1/index.ts"
+    "dev": "nodemon ./day-08/part-2/index.js"
   },
   "author": "",
   "license": "ISC",
